# market-sim

./: .gitignore  CMakeLists.txt  resources.qrc
include/: DataFetcher.h  MainWindow.h  MarketSimulator.h  MathUtils.h  api.h  display.h
python/: generate_chart.py
qml/: CustomMenuBar.qml  MainWindow.qml  SidePanel.qml  main.qml
qml/UntitledProject5/: Constants.qml  qmldir
src/: DataFetcher.cpp  MainWindow.cpp  MarketSimulator.cpp  MathUtils.cpp  api.cpp  display.cpp  main.cpp
